--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -13,7 +13,7 @@
         <Label layoutX="53.0" layoutY="91.0" prefHeight="18.0" prefWidth="86.0" text="Brukernavn" />
         <Label layoutX="53.0" layoutY="143.0" prefHeight="18.0" prefWidth="68.0" text="Passord" />
         <Label layoutX="37.0" layoutY="204.0" prefHeight="18.0" prefWidth="110.0" text="Telefonnummer" />
-        <Label fx:id="txtError" layoutX="49.0" layoutY="254.0" prefHeight="18.0" prefWidth="93.0" text="Email" />
+        <Label layoutX="49.0" layoutY="254.0" prefHeight="18.0" prefWidth="93.0" text="Email" />
         <TextField fx:id="txtPassord" layoutX="178.0" layoutY="137.0" prefHeight="30.0" prefWidth="170.0" />
         <TextField fx:id="txtTelefonnummer" layoutX="178.0" layoutY="198.0" prefHeight="30.0" prefWidth="170.0" />
         <TextField fx:id="txtEmail" layoutX="179.0" layoutY="248.0" prefHeight="30.0" prefWidth="170.0" />
@@ -26,5 +26,6 @@
                 <Font size="22.0" />
             </font>
         </Label>
+      <Label fx:id="txtError" layoutX="407.0" layoutY="326.0" prefHeight="18.0" prefWidth="170.0" />
     </children>
 </AnchorPane>
