--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -10,32 +10,53 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
    <children>
-      <Button layoutX="532.0" layoutY="362.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" text="Tilbake" />
-      <Label layoutX="32.0" layoutY="57.0" prefHeight="18.0" prefWidth="98.0" text="Velg maskin:">
+      <Button layoutX="528.0" layoutY="359.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" text="Tilbake">
          <font>
-            <Font name="Consolas Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtMaskin" layoutX="12.0" layoutY="76.0" prefHeight="26.0" prefWidth="137.0" />
-      <Button layoutX="207.0" layoutY="76.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor" prefHeight="60.0" prefWidth="98.0" text="Prosessor (CPU)">
-         <font>
-            <Font size="11.0" />
+            <Font name="Futura Bold" size="10.0" />
          </font></Button>
-      <Button layoutX="328.0" layoutY="76.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort" prefHeight="60.0" prefWidth="98.0" text="Grafikkort" />
-      <Button layoutX="316.0" layoutY="248.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke" prefHeight="60.0" prefWidth="121.0" text="RAM minnebrikke" />
-      <Button layoutX="207.0" layoutY="170.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk" prefHeight="60.0" prefWidth="98.0" text="Harddisk" />
-      <Button layoutX="327.0" layoutY="170.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur" prefHeight="60.0" prefWidth="98.0" text="Tastatur" />
-      <Button layoutX="453.0" layoutY="170.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0" prefWidth="98.0" text="Mus" />
-      <Button layoutX="453.0" layoutY="76.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0" prefWidth="98.0" text="Skjerm" />
-      <TextField fx:id="txtHandlekurve" layoutX="13.0" layoutY="298.0" prefHeight="90.0" prefWidth="155.0" />
-      <Label layoutX="41.0" layoutY="278.0" prefHeight="18.0" prefWidth="98.0" text="Handlekurve:">
+      <Label layoutX="22.0" layoutY="57.0" prefHeight="18.0" prefWidth="98.0" text="Velg maskin:">
          <font>
-            <Font name="Consolas Bold" size="14.0" />
+            <Font name="Futura Bold" size="14.0" />
          </font>
       </Label>
-      <ImageView fx:id="img_Techmet" fitHeight="149.0" fitWidth="200.0" layoutX="279.0" layoutY="-32.0">
+      <TextField fx:id="txtMaskin" layoutX="22.0" layoutY="82.0" prefHeight="26.0" prefWidth="137.0" />
+      <Button layoutX="193.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Prosessor (CPU)">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <Button layoutX="328.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Grafikkort">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <Button layoutX="328.0" layoutY="279.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="RAM minnebrikke">
+         <font>
+            <Font name="Futura Medium" size="11.0" />
+         </font></Button>
+      <Button layoutX="193.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Harddisk">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <Button layoutX="328.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Tastatur">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <Button layoutX="453.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Mus">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <Button layoutX="453.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Skjerm">
+         <font>
+            <Font name="Futura Medium" size="12.0" />
+         </font></Button>
+      <TextField fx:id="txtHandlekurve" layoutX="22.0" layoutY="296.0" prefHeight="90.0" prefWidth="155.0" />
+      <Label layoutX="22.0" layoutY="269.0" prefHeight="19.0" prefWidth="112.0" text="Handlekurve:">
+         <font>
+            <Font name="Futura Bold" size="14.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="img_Techmet" fitHeight="149.0" fitWidth="198.0" layoutX="285.0" layoutY="-21.0">
          <image>
             <Image url="@../img/logo3.png" />
          </image>
