--- a/src/sample/Superbruker.fxml
+++ b/src/sample/Superbruker.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.SubScene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,15 +12,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Superbruker_Controller">
     <children>
-        <TableView fx:id="tableview" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0" tableMenuButtonVisible="true">
-            <columns>
-                <TableColumn prefWidth="75.0" style="-fx-font-family: futura;" text="Type" />
-                <TableColumn prefWidth="75.0" style="-fx-font-family: futura;" text="1" />
-                <TableColumn prefWidth="75.0" style="-fx-font-family: futura;" text="2" />
-                <TableColumn prefWidth="74.0" style="-fx-font-family: futura;" text="3" />
-                <TableColumn prefWidth="76.0" style="-fx-font-family: futura;" text="Pris" />
-            </columns>
-        </TableView>
+        <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0" tableMenuButtonVisible="true" />
         <Separator layoutY="67.0" prefHeight="3.0" prefWidth="610.0" />
       <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="210.0" layoutY="-35.0">
          <image>
