--- a/src/sample/LoggInn.fxml
+++ b/src/sample/LoggInn.fxml
@@ -13,11 +13,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="423.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoggInn_Controller">
    <children>
-      <TextField fx:id="txtBrukernavn" layoutX="125.0" layoutY="192.0" promptText="Brukernavn">
+      <TextField fx:id="txtBrukernavn" layoutX="123.0" layoutY="193.0" promptText="Brukernavn">
          <font>
             <Font name="Futura Bold" size="13.0" />
          </font></TextField>
-      <TextField fx:id="txtPassord" layoutX="125.0" layoutY="237.0" promptText="Passord">
+      <TextField fx:id="txtPassord" layoutX="123.0" layoutY="237.0" promptText="Passord">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
@@ -28,11 +28,11 @@
             <Font name="Futura Bold" size="13.0" />
          </font>
       </TextField>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="166.0" layoutY="287.0" mnemonicParsing="false" onAction="#onClick_btn_LoggInn" prefHeight="38.0" prefWidth="112.0" style="-fx-border-color: black; -fx-color: #3daee4;" text="Logg inn">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="165.0" layoutY="290.0" mnemonicParsing="false" onAction="#onClick_btn_LoggInn" prefHeight="38.0" prefWidth="112.0" style="-fx-border-color: black; -fx-background-color: #3daee4;" text="Logg inn">
          <font>
             <Font name="Futura Bold" size="13.0" />
          </font></Button>
-      <Button layoutX="153.0" layoutY="376.0" mnemonicParsing="false" onAction="#onClick_btn_RegistrerNyBruker" prefHeight="28.0" prefWidth="135.0" text="Registrer ny bruker">
+      <Button layoutX="150.0" layoutY="376.0" mnemonicParsing="false" onAction="#onClick_btn_RegistrerNyBruker" prefHeight="38.0" prefWidth="143.0" text="Registrer ny bruker">
          <font>
             <Font name="Futura Medium" size="13.0" />
          </font></Button>
@@ -41,7 +41,7 @@
             <Font name="Futura Bold" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="187.0" layoutY="428.0" mnemonicParsing="false" onAction="#onClick_btn_Avslutt" prefHeight="22.0" prefWidth="66.0" text="Avslutt">
+      <Button layoutX="187.0" layoutY="428.0" mnemonicParsing="false" onAction="#onClick_btn_Avslutt" prefHeight="22.0" prefWidth="66.0" style="-fx-background-color: black;" text="Avslutt" textFill="WHITE">
          <font>
             <Font name="Futura Bold" size="10.0" />
          </font></Button>
