--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
    <children>
-      <Button layoutX="528.0" layoutY="359.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" text="Tilbake">
+      <Button layoutX="528.0" layoutY="359.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
          <font>
             <Font name="Futura Bold" size="10.0" />
          </font></Button>
