--- a/src/sample/Superbruker.fxml
+++ b/src/sample/Superbruker.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Superbruker_Controller">
+<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Superbruker_Controller">
     <children>
         <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0" tableMenuButtonVisible="true" />
         <Separator layoutY="67.0" prefHeight="3.0" prefWidth="610.0" />
@@ -19,19 +19,19 @@
                 <Image url="@../img/logo3.png" />
             </image>
         </ImageView>
-        <Button layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnLeggTilKomponenter" prefHeight="46.0" prefWidth="162.0" text="Legg til komponenter">
+        <Button layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnLeggTilKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Legg til komponenter">
             <font>
                 <Font name="Futura Medium" size="13.0" />
             </font></Button>
-        <Button layoutX="229.0" layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnFjernKomponenter" prefHeight="46.0" prefWidth="162.0" text="Fjern komponenter">
+        <Button layoutX="229.0" layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnFjernKomponenter" prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Fjern komponenter">
             <font>
                 <Font name="Futura Medium" size="13.0" />
             </font></Button>
-        <Button layoutX="436.0" layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnRedigerKomponenter" prefHeight="46.0" prefWidth="173.0" text="Rediger komponenter">
+        <Button layoutX="436.0" layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnRedigerKomponenter" prefHeight="46.0" prefWidth="173.0" style="-fx-background-color: #3daee4;" text="Rediger komponenter">
             <font>
                 <Font name="Futura Medium" size="13.0" />
             </font></Button>
-        <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" text="Tilbake">
+        <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
             <font>
                 <Font name="Futura Medium" size="13.0" />
             </font></Button>
