--- a/src/sample/Visbruker_Superbruker.fxml
+++ b/src/sample/Visbruker_Superbruker.fxml
@@ -10,8 +10,8 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: white;"
-            xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: #F2F2F2;"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="sample.Visbruker_Superbruker_Controller">
     <children>
         <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0"
@@ -22,31 +22,31 @@
                 <Image url="@../img/logo3.png"/>
             </image>
         </ImageView>
-        <Button fx:id="btnLeggTil" layoutY="68.0" mnemonicParsing="false"
-                onAction="#On_Click_BtnVisKomponenterTilBrukeren" prefHeight="46.0" prefWidth="212.0"
+        <Button fx:id="btnLeggTil" layoutX="14.0" layoutY="68.0" mnemonicParsing="false"
+                onAction="#On_Click_BtnVisKomponenterTilBrukeren" prefHeight="46.0" prefWidth="177.0"
                 style="-fx-background-color: #3daee4;" text="Vis komponenter til brukeren">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
-        <Button fx:id="btnFjern" layoutX="199.0" layoutY="68.0" mnemonicParsing="false"
-                onAction="#On_Click_BtnFjernBruker" prefHeight="46.0" prefWidth="212.0"
+        <Button fx:id="btnFjern" layoutX="222.0" layoutY="68.0" mnemonicParsing="false"
+                onAction="#On_Click_BtnFjernBruker" prefHeight="46.0" prefWidth="177.0"
                 style="-fx-background-color: #3daee4;" text="Fjern bruker">
             <font>
                 <Font name="Candara Light" size="15.0"/>
             </font>
         </Button>
-        <Button fx:id="btnRediger" layoutX="399.0" layoutY="68.0" mnemonicParsing="false"
-                onAction="#On_Click_BtnRedigerBruker" prefHeight="46.0" prefWidth="212.0"
+        <Button fx:id="btnRediger" layoutX="423.0" layoutY="68.0" mnemonicParsing="false"
+                onAction="#On_Click_BtnRedigerBruker" prefHeight="46.0" prefWidth="177.0"
                 style="-fx-background-color: #3daee4;" text="Rediger bruker">
             <font>
                 <Font name="Candara Light" size="15.0"/>
             </font>
         </Button>
-        <Button fx:id="btnTilbake" layoutX="532.0" layoutY="14.0" mnemonicParsing="false"
+        <Button fx:id="btnTilbake" layoutX="534.0" layoutY="11.0" mnemonicParsing="false"
                 onAction="#On_Click_BtnTilbake" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="14.0"/>
             </font>
         </Button>
         <SubScene fx:id="LeggTilKomponent_sub" height="286.0" layoutY="113.0" visible="false" width="610.0">
