--- a/src/sample/Viskomponenter_Superbruker.fxml
+++ b/src/sample/Viskomponenter_Superbruker.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: white;"
-            xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane prefHeight="400.0" prefWidth="609.0" style="-fx-background-color: #F2F2F2;"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="sample.Viskomponenter_Superbruker_Controller">
     <children>
         <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0"
                    tableMenuButtonVisible="true"/>
         <Separator layoutY="67.0" prefHeight="3.0" prefWidth="610.0"/>
-        <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="210.0" layoutY="-35.0">
+        <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="210.0" layoutY="-37.0">
             <image>
                 <Image url="@../img/logo3.png"/>
             </image>
@@ -25,27 +25,27 @@
         <Button fx:id="btnLeggTil" layoutY="68.0" mnemonicParsing="false" onAction="#On_Click_BtnLeggTilKomponenter"
                 prefHeight="46.0" prefWidth="162.0" style="-fx-background-color: #3daee4;" text="Legg til komponenter">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="15.0"/>
             </font>
         </Button>
         <Button fx:id="btnFjern" layoutX="229.0" layoutY="68.0" mnemonicParsing="false"
                 onAction="#On_Click_BtnFjernKomponenter" prefHeight="46.0" prefWidth="162.0"
                 style="-fx-background-color: #3daee4;" text="Fjern komponenter">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="15.0"/>
             </font>
         </Button>
         <Button fx:id="btnRediger" layoutX="436.0" layoutY="68.0" mnemonicParsing="false"
                 onAction="#On_Click_BtnRedigerKomponenter" prefHeight="46.0" prefWidth="173.0"
                 style="-fx-background-color: #3daee4;" text="Rediger komponenter">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="15.0"/>
             </font>
         </Button>
-        <Button fx:id="btnTilbake" layoutX="532.0" layoutY="14.0" mnemonicParsing="false"
+        <Button fx:id="btnTilbake" layoutX="537.0" layoutY="11.0" mnemonicParsing="false"
                 onAction="#On_Click_BtnTilbake" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
             <font>
-                <Font name="Candara Light" size="15.0"/>
+                <Font name="Helvetica" size="13.0"/>
             </font>
         </Button>
         <SubScene fx:id="LeggTilKomponent_sub" height="286.0" layoutY="113.0" visible="false" width="610.0">
