--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -30,43 +30,43 @@
         <Button layoutX="193.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor"
                 prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Prosessor (CPU)">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <Button layoutX="328.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort"
                 prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Grafikkort">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <Button layoutX="328.0" layoutY="279.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke"
                 prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="RAM minnebrikke">
             <font>
-                <Font name="Helvetica Bold" size="11.0"/>
+                <Font name="Helvetica" size="11.0"/>
             </font>
         </Button>
         <Button layoutX="193.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk"
                 prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Harddisk">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <Button layoutX="328.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur"
                 prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Tastatur">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <Button layoutX="453.0" layoutY="190.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0"
                 prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Mus">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <Button layoutX="453.0" layoutY="96.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0"
                 prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Skjerm">
             <font>
-                <Font name="Futura Medium" size="12.0"/>
+                <Font name="Helvetica" size="12.0"/>
             </font>
         </Button>
         <ImageView fx:id="img_Techmet" fitHeight="149.0" fitWidth="198.0" layoutX="285.0" layoutY="-21.0">
