--- a/src/sample/Mellom_side_Superbruker.fxml
+++ b/src/sample/Mellom_side_Superbruker.fxml
@@ -11,30 +11,35 @@
             prefWidth="562.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/8.0.171"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mellom_side_SuperbrukerController">
     <children>
-        <Label layoutX="39.0" layoutY="148.0" prefHeight="34.0" prefWidth="485.0"
+        <ImageView fitHeight="316.0" fitWidth="570.0">
+            <image>
+                <Image url="@../img/background.jpg"/>
+            </image>
+        </ImageView>
+        <Label layoutX="48.0" layoutY="141.0" prefHeight="34.0" prefWidth="467.0"
                text="Du har nå logget inn som administrator, hvilken side vil du til nå?">
             <font>
                 <Font name="Helvetica Bold" size="15.0"/>
             </font>
         </Label>
-        <Button layoutX="71.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter"
+        <Button layoutX="65.0" layoutY="191.0" mnemonicParsing="false" onAction="#On_Click_BtnVisKomponenter"
                 prefHeight="58.0" prefWidth="180.0" style="-fx-background-color: #3daee4;" text="Systemets komponenter">
             <font>
                 <Font name="Helvetica" size="14.0"/>
             </font>
         </Button>
-        <Button layoutX="328.0" layoutY="198.0" mnemonicParsing="false" onAction="#On_Click_BtnVisBrukere"
+        <Button layoutX="319.0" layoutY="191.0" mnemonicParsing="false" onAction="#On_Click_BtnVisBrukere"
                 prefHeight="58.0" prefWidth="127.0" style="-fx-background-color: #3daee4;" text="Brukere">
             <font>
                 <Font name="Helvetica" size="14.0"/>
             </font>
         </Button>
-        <ImageView fitHeight="141.0" fitWidth="180.0" layoutX="191.0" layoutY="14.0">
+        <ImageView fitHeight="141.0" fitWidth="180.0" layoutX="195.0" layoutY="7.0">
             <image>
                 <Image url="@../img/logo1.png"/>
             </image>
         </ImageView>
-        <Button layoutX="244.0" layoutY="280.0" mnemonicParsing="false" onAction="#On_Click_BtnReturnerTilStart"
+        <Button layoutX="245.0" layoutY="273.0" mnemonicParsing="false" onAction="#On_Click_BtnReturnerTilStart"
                 prefHeight="18.0" prefWidth="74.0" style="-fx-background-color: black;" text="Logg ut" textFill="WHITE">
             <font>
                 <Font name="Helvetica" size="11.0"/>
