--- a/src/sample/Visbruker_Superbruker.fxml
+++ b/src/sample/Visbruker_Superbruker.fxml
@@ -14,14 +14,9 @@
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="sample.Visbruker_Superbruker_Controller">
     <children>
-        <ImageView fitHeight="410.0" fitWidth="618.0" layoutX="-7.0">
-            <image>
-                <Image url="@../img/background.jpg"/>
-            </image>
-        </ImageView>
-        <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="611.0"
+        <TableView fx:id="tableView" editable="true" layoutY="114.0" prefHeight="286.0" prefWidth="609.0"
                    tableMenuButtonVisible="true"/>
-        <Separator layoutY="65.0" prefHeight="3.0" prefWidth="610.0" style="-fx-background-color: black;"/>
+        <Separator layoutY="67.0" prefHeight="3.0" prefWidth="610.0"/>
         <ImageView fitHeight="149.0" fitWidth="200.0" layoutX="210.0" layoutY="-35.0">
             <image>
                 <Image url="@../img/logo3.png"/>
