--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -92,7 +92,7 @@
                 <Font name="Helvetica Bold" size="26.0"/>
             </font>
         </Label>
-        <Label fx:id="txtError" layoutX="179.0" layoutY="410.0" prefHeight="18.0" prefWidth="230.0"/>
+        <Label fx:id="labelError" layoutX="179.0" layoutY="410.0" prefHeight="18.0" prefWidth="230.0"/>
         <ImageView fitHeight="90.0" fitWidth="109.0" layoutX="473.0" layoutY="14.0">
             <image>
                 <Image url="@../img/logo2.png"/>
