--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -73,5 +74,7 @@
             </font>
         </Button>
       <ScrollPane fx:id="pane" layoutX="600.0" layoutY="-7.0" prefHeight="409.0" prefWidth="200.0" />
+      <AnchorPane fx:id="info" layoutX="239.0" layoutY="88.0" prefHeight="202.0" prefWidth="210.0" visible="false" />
+      <DialogPane fx:id="infoDialog" layoutX="204.0" layoutY="95.0" visible="false" />
     </children>
 </AnchorPane>
