--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -9,80 +9,80 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="455.0" prefWidth="596.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="611.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
     <children>
-        <ImageView fitHeight="468.0" fitWidth="610.0" layoutX="-7.0" layoutY="-7.0">
+        <ImageView fitHeight="468.0" fitWidth="610.0" layoutX="-7.0" layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
         </ImageView>
-        <TextField fx:id="txtBrukernavn" layoutX="194.0" layoutY="136.0" prefHeight="30.0" prefWidth="170.0" promptText="Brukernavn">
+        <TextField fx:id="txtBrukernavn" layoutX="195.0" layoutY="141.0" prefHeight="30.0" prefWidth="170.0" promptText="Brukernavn">
             <font>
                 <Font name="Rockwell" size="12.0" />
             </font>
         </TextField>
-        <Label layoutX="58.0" layoutY="142.0" prefHeight="18.0" prefWidth="77.0" text="Brukernavn">
+        <Label layoutX="59.0" layoutY="147.0" prefHeight="18.0" prefWidth="77.0" text="Brukernavn">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="58.0" layoutY="193.0" prefHeight="18.0" prefWidth="55.0" text="Passord">
+        <Label layoutX="60.0" layoutY="207.0" prefHeight="18.0" prefWidth="55.0" text="Passord">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="58.0" layoutY="254.0" prefHeight="18.0" prefWidth="109.0" text="Telefonnummer">
+        <Label layoutX="61.0" layoutY="268.0" prefHeight="18.0" prefWidth="109.0" text="Telefonnummer">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Label>
-        <Label layoutX="58.0" layoutY="304.0" prefHeight="18.0" prefWidth="96.0" text="E-postadresse">
+        <Label layoutX="61.0" layoutY="325.0" prefHeight="18.0" prefWidth="96.0" text="E-postadresse">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="txtPassord" layoutX="194.0" layoutY="187.0" prefHeight="30.0" prefWidth="170.0" promptText="Passord">
+        <TextField fx:id="txtPassord" layoutX="195.0" layoutY="201.0" prefHeight="30.0" prefWidth="170.0" promptText="Passord">
             <font>
                 <Font name="Rockwell" size="12.0" />
             </font>
         </TextField>
-        <TextField fx:id="txtTelefonnummer" layoutX="194.0" layoutY="248.0" prefHeight="30.0" prefWidth="170.0" promptText="Telefonnummer">
+        <TextField fx:id="txtTelefonnummer" layoutX="196.0" layoutY="262.0" prefHeight="30.0" prefWidth="170.0" promptText="Telefonnummer">
             <font>
                 <Font name="Rockwell" size="12.0" />
             </font>
         </TextField>
-        <TextField fx:id="txtEmail" layoutX="194.0" layoutY="298.0" prefHeight="30.0" prefWidth="170.0" promptText="E-postadresse">
+        <TextField fx:id="txtEmail" layoutX="196.0" layoutY="319.0" prefHeight="30.0" prefWidth="170.0" promptText="E-postadresse">
             <font>
                 <Font name="Rockwell" size="12.0" />
             </font>
         </TextField>
-        <CheckBox fx:id="chxAdmin" layoutX="167.0" layoutY="368.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="77.0" text="Admin">
+        <CheckBox fx:id="chxAdmin" layoutX="149.0" layoutY="391.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="77.0" text="Admin">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </CheckBox>
-        <CheckBox fx:id="chxStandarbruker" layoutX="273.0" layoutY="368.0" mnemonicParsing="false" text="Standardbruker">
+        <CheckBox fx:id="chxStandarbruker" layoutX="252.0" layoutY="391.0" mnemonicParsing="false" text="Standardbruker">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </CheckBox>
-        <Button fx:id="btnRegistrer" layoutX="433.0" layoutY="154.0" mnemonicParsing="false" onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Register">
+        <Button fx:id="btnRegistrer" layoutX="434.0" layoutY="177.0" mnemonicParsing="false" onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Register">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Button>
-        <Button fx:id="btnAvbryt" layoutX="433.0" layoutY="254.0" mnemonicParsing="false" onAction="#onClick_btn_Avbryt" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Avbryt">
+        <Button fx:id="btnAvbryt" layoutX="434.0" layoutY="277.0" mnemonicParsing="false" onAction="#onClick_btn_Avbryt" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Avbryt">
             <font>
                 <Font name="Rockwell" size="14.0" />
             </font>
         </Button>
-        <Label layoutX="158.0" layoutY="73.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
+        <Label layoutX="149.0" layoutY="64.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
             <font>
                 <Font name="Rockwell" size="26.0" />
             </font>
         </Label>
         <Label fx:id="labelError" layoutX="179.0" layoutY="410.0" prefHeight="18.0" prefWidth="230.0" />
-        <ImageView fitHeight="90.0" fitWidth="109.0" layoutX="464.0" layoutY="28.0">
+        <ImageView fitHeight="90.0" fitWidth="109.0" layoutX="439.0" layoutY="35.0">
             <image>
                 <Image url="@../img/logo2.png" />
             </image>
