--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="617.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
     <children>
-        <ImageView fitHeight="409.0" fitWidth="617.0" layoutX="-9.0" layoutY="-8.0">
+        <ImageView fitHeight="409.0" fitWidth="617.0" layoutX="-9.0" layoutY="-8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
             <image>
                 <Image url="@../img/background.jpg" />
             </image>
@@ -65,7 +65,7 @@
                 <Font name="Rockwell" size="11.0" />
             </font>
         </Button>
-        <ScrollPane fx:id="pane" layoutX="600.0" layoutY="-7.0" prefHeight="409.0" prefWidth="328.0" />
+        <ScrollPane fx:id="pane" layoutX="617.0" layoutY="-7.0" prefHeight="416.0" prefWidth="405.0" />
       <Label fx:id="labelError" alignment="CENTER" layoutX="69.0" layoutY="368.0" prefHeight="18.0" prefWidth="477.0" />
     </children>
 </AnchorPane>
