--- a/src/sample/MellomSide.fxml
+++ b/src/sample/MellomSide.fxml
@@ -16,17 +16,17 @@
         </ImageView>
         <Label layoutX="80.0" layoutY="152.0" prefHeight="33.0" prefWidth="307.0" text="Du har nå laget en bruker, vil du nå?">
             <font>
-                <Font name="Rockwell" size="18.0" />
+                <Font name="Verdana" size="16.0" />
             </font>
         </Label>
         <Button layoutX="75.0" layoutY="201.0" mnemonicParsing="false" onAction="#On_Click_BtnNyBruker" prefHeight="58.0" prefWidth="139.0" style="-fx-background-color: #3daee4;" text="Lage en ny bruker">
             <font>
-                <Font name="Rockwell" size="13.0" />
+                <Font name="Verdana" size="13.0" />
             </font>
         </Button>
         <Button layoutX="248.0" layoutY="201.0" mnemonicParsing="false" onAction="#On_Click_BtnLoggInn" prefHeight="58.0" prefWidth="139.0" style="-fx-background-color: #3daee4;" text="Logg inn">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="14.0" />
             </font>
         </Button>
         <ImageView fitHeight="141.0" fitWidth="180.0" layoutX="144.0" layoutY="14.0">
