--- a/src/sample/Registrering.fxml
+++ b/src/sample/Registrering.fxml
@@ -18,67 +18,67 @@
         </ImageView>
         <TextField fx:id="txtBrukernavn" layoutX="195.0" layoutY="141.0" prefHeight="30.0" prefWidth="170.0" promptText="Brukernavn">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </TextField>
         <Label layoutX="59.0" layoutY="147.0" prefHeight="18.0" prefWidth="77.0" text="Brukernavn">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Label>
         <Label layoutX="60.0" layoutY="207.0" prefHeight="18.0" prefWidth="55.0" text="Passord">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Label>
         <Label layoutX="61.0" layoutY="268.0" prefHeight="18.0" prefWidth="109.0" text="Telefonnummer">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Label>
         <Label layoutX="61.0" layoutY="325.0" prefHeight="18.0" prefWidth="96.0" text="E-postadresse">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Label>
         <TextField fx:id="txtPassord" layoutX="195.0" layoutY="201.0" prefHeight="30.0" prefWidth="170.0" promptText="Passord">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </TextField>
         <TextField fx:id="txtTelefonnummer" layoutX="196.0" layoutY="262.0" prefHeight="30.0" prefWidth="170.0" promptText="Telefonnummer">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </TextField>
         <TextField fx:id="txtEmail" layoutX="196.0" layoutY="319.0" prefHeight="30.0" prefWidth="170.0" promptText="E-postadresse">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </TextField>
         <CheckBox fx:id="chxAdmin" layoutX="149.0" layoutY="391.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="77.0" text="Admin">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="14.0" />
             </font>
         </CheckBox>
         <CheckBox fx:id="chxStandarbruker" layoutX="252.0" layoutY="391.0" mnemonicParsing="false" text="Standardbruker">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="14.0" />
             </font>
         </CheckBox>
         <Button fx:id="btnRegistrer" layoutX="434.0" layoutY="177.0" mnemonicParsing="false" onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Register">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="14.0" />
             </font>
         </Button>
         <Button fx:id="btnAvbryt" layoutX="434.0" layoutY="277.0" mnemonicParsing="false" onAction="#onClick_btn_Avbryt" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Avbryt">
             <font>
-                <Font name="Rockwell" size="14.0" />
+                <Font name="Verdana" size="14.0" />
             </font>
         </Button>
         <Label layoutX="149.0" layoutY="64.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
             <font>
-                <Font name="Rockwell" size="26.0" />
+                <Font name="Verdana" size="22.0" />
             </font>
         </Label>
         <Label fx:id="labelError" layoutX="179.0" layoutY="410.0" prefHeight="18.0" prefWidth="230.0" />
