--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -17,42 +17,42 @@
         </ImageView>
         <Button fx:id="btnTilbake" layoutX="430.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
             <font>
-                <Font name="Rockwell" size="11.0" />
+                <Font name="Verdana" size="11.0" />
             </font>
         </Button>
         <Button layoutX="70.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Prosessor (CPU)">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="11.0" />
             </font>
         </Button>
         <Button layoutX="249.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Grafikkort">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Button>
         <Button layoutX="249.0" layoutY="299.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="RAM minnebrikke">
             <font>
-                <Font name="Rockwell" size="11.0" />
+                <Font name="Verdana" size="10.0" />
             </font>
         </Button>
         <Button layoutX="70.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Harddisk">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Button>
         <Button layoutX="249.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Tastatur">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Button>
         <Button layoutX="430.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Mus">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Button>
         <Button layoutX="430.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Skjerm">
             <font>
-                <Font name="Rockwell" size="12.0" />
+                <Font name="Verdana" size="12.0" />
             </font>
         </Button>
         <ImageView fx:id="img_Techmet" fitHeight="171.0" fitWidth="239.0" layoutX="186.0" layoutY="-38.0">
@@ -62,7 +62,7 @@
         </ImageView>
         <Button fx:id="btnKurv" layoutX="70.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnKurv" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Din handlekurv" textFill="WHITE">
             <font>
-                <Font name="Rockwell" size="11.0" />
+                <Font name="Verdana" size="11.0" />
             </font>
         </Button>
         <ScrollPane fx:id="pane" layoutX="617.0" layoutY="-7.0" prefHeight="416.0" prefWidth="405.0" />
