--- a/src/sample/Standardbruker.fxml
+++ b/src/sample/Standardbruker.fxml
@@ -8,67 +8,82 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="617.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0"
+            prefWidth="617.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Standardbruker_Controller">
     <children>
-        <ImageView fitHeight="1089.0" fitWidth="1921.0" layoutX="-9.0" layoutY="-8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="1089.0" fitWidth="1921.0" layoutX="-9.0" layoutY="-8.0" AnchorPane.bottomAnchor="0.0"
+                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
             <image>
-                <Image url="@../img/background.jpg" />
+                <Image url="@../img/background.jpg"/>
             </image>
         </ImageView>
-        <Button fx:id="btnTilbake" layoutX="430.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnTilbake" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Tilbake" textFill="WHITE">
+        <Button fx:id="btnTilbake" layoutX="430.0" layoutY="315.0" mnemonicParsing="false"
+                onAction="#On_Click_BtnTilbake" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;"
+                text="Tilbake" textFill="WHITE">
             <font>
-                <Font name="Verdana" size="11.0" />
+                <Font name="Verdana" size="11.0"/>
             </font>
         </Button>
-        <Button layoutX="70.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Prosessor (CPU)">
+        <Button layoutX="70.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Prosessor"
+                prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Prosessor (CPU)">
             <font>
-                <Font name="Verdana" size="11.0" />
+                <Font name="Verdana" size="11.0"/>
             </font>
         </Button>
-        <Button layoutX="249.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Grafikkort">
+        <Button layoutX="249.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Grafikkort"
+                prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Grafikkort">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </Button>
-        <Button layoutX="249.0" layoutY="299.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="RAM minnebrikke">
+        <Button layoutX="249.0" layoutY="299.0" mnemonicParsing="false" onAction="#On_Click_Btn_Minnebrikke"
+                prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="RAM minnebrikke">
             <font>
-                <Font name="Verdana" size="10.0" />
+                <Font name="Verdana" size="10.0"/>
             </font>
         </Button>
-        <Button layoutX="70.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Harddisk">
+        <Button layoutX="70.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Harddisk"
+                prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Harddisk">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </Button>
-        <Button layoutX="249.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Tastatur">
+        <Button layoutX="249.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Tastatur"
+                prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Tastatur">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </Button>
-        <Button layoutX="430.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Mus">
+        <Button layoutX="430.0" layoutY="197.0" mnemonicParsing="false" onAction="#On_Click_Btn_Mus" prefHeight="60.0"
+                prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Mus">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </Button>
-        <Button layoutX="430.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0" prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Skjerm">
+        <Button layoutX="430.0" layoutY="94.0" mnemonicParsing="false" onAction="#On_Click_Btn_Skjerm" prefHeight="60.0"
+                prefWidth="112.0" style="-fx-background-color: #3daee4;" text="Skjerm">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </Button>
         <ImageView fx:id="img_Techmet" fitHeight="171.0" fitWidth="239.0" layoutX="186.0" layoutY="-38.0">
             <image>
-                <Image url="@../img/logo3.png" />
+                <Image url="@../img/logo3.png"/>
             </image>
         </ImageView>
-        <Button fx:id="btnKurv" layoutX="70.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnKurv" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Din handlekurv" textFill="WHITE">
+        <Button fx:id="btnKurv" layoutX="70.0" layoutY="315.0" mnemonicParsing="false" onAction="#On_Click_BtnKurv"
+                prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: black;" text="Din handlekurv"
+                textFill="WHITE">
             <font>
-                <Font name="Verdana" size="11.0" />
+                <Font name="Verdana" size="11.0"/>
             </font>
         </Button>
-        <ScrollPane fx:id="pane" layoutX="617.0" layoutY="-7.0" prefHeight="416.0" prefWidth="405.0" />
-      <Label fx:id="labelError" alignment="CENTER" layoutX="70.0" layoutY="377.0" prefHeight="18.0" prefWidth="477.0">
-         <font>
-            <Font name="Verdana" size="12.0" />
-         </font></Label>
+        <ScrollPane fx:id="pane" layoutX="617.0" layoutY="-7.0" prefHeight="423.0" prefWidth="598.0"/>
+        <Label fx:id="labelError" alignment="CENTER" layoutX="70.0" layoutY="377.0" prefHeight="18.0" prefWidth="477.0">
+            <font>
+                <Font name="Verdana" size="12.0"/>
+            </font>
+        </Label>
     </children>
 </AnchorPane>
