--- a/src/main/resources/Registrering.fxml
+++ b/src/main/resources/Registrering.fxml
@@ -9,85 +9,97 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="455.0" prefWidth="596.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="455.0"
+            prefWidth="596.0" style="-fx-background-color: #F2F2F2;" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Registrering_Controller">
     <children>
         <ImageView fitHeight="468.0" fitWidth="610.0" layoutX="-7.0" layoutY="-7.0">
             <image>
-                <Image url="@img/background.jpg" />
+                <Image url="@img/background.jpg"/>
             </image>
         </ImageView>
-        <TextField fx:id="txtBrukernavn" layoutX="194.0" layoutY="136.0" prefHeight="30.0" prefWidth="170.0" promptText="Brukernavn">
+        <TextField fx:id="txtBrukernavn" layoutX="194.0" layoutY="136.0" prefHeight="30.0" prefWidth="170.0"
+                   promptText="Brukernavn">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </TextField>
         <Label layoutX="58.0" layoutY="142.0" prefHeight="18.0" prefWidth="77.0" text="Brukernavn">
             <font>
-                <Font name="Verdana" size="13.0" />
+                <Font name="Verdana" size="13.0"/>
             </font>
         </Label>
         <Label layoutX="58.0" layoutY="193.0" prefHeight="18.0" prefWidth="55.0" text="Passord">
             <font>
-                <Font name="Verdana" size="13.0" />
+                <Font name="Verdana" size="13.0"/>
             </font>
         </Label>
         <Label layoutX="58.0" layoutY="254.0" prefHeight="18.0" prefWidth="109.0" text="Telefonnummer">
             <font>
-                <Font name="Verdana" size="13.0" />
+                <Font name="Verdana" size="13.0"/>
             </font>
         </Label>
         <Label layoutX="58.0" layoutY="304.0" prefHeight="18.0" prefWidth="96.0" text="E-postadresse">
             <font>
-                <Font name="Verdana" size="13.0" />
+                <Font name="Verdana" size="13.0"/>
             </font>
         </Label>
-        <TextField fx:id="txtPassord" layoutX="194.0" layoutY="187.0" prefHeight="30.0" prefWidth="170.0" promptText="Passord">
+        <TextField fx:id="txtPassord" layoutX="194.0" layoutY="187.0" prefHeight="30.0" prefWidth="170.0"
+                   promptText="Passord">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </TextField>
-        <TextField fx:id="txtTelefonnummer" layoutX="194.0" layoutY="248.0" prefHeight="30.0" prefWidth="170.0" promptText="Telefonnummer">
+        <TextField fx:id="txtTelefonnummer" layoutX="194.0" layoutY="248.0" prefHeight="30.0" prefWidth="170.0"
+                   promptText="Telefonnummer">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </TextField>
-        <TextField fx:id="txtEmail" layoutX="194.0" layoutY="298.0" prefHeight="30.0" prefWidth="170.0" promptText="E-postadresse">
+        <TextField fx:id="txtEmail" layoutX="194.0" layoutY="298.0" prefHeight="30.0" prefWidth="170.0"
+                   promptText="E-postadresse">
             <font>
-                <Font name="Verdana" size="12.0" />
+                <Font name="Verdana" size="12.0"/>
             </font>
         </TextField>
-        <CheckBox fx:id="chxAdmin" layoutX="162.0" layoutY="368.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="77.0" text="Admin">
+        <CheckBox fx:id="chxAdmin" layoutX="162.0" layoutY="368.0" mnemonicParsing="false" prefHeight="18.0"
+                  prefWidth="77.0" text="Admin">
             <font>
-                <Font name="Verdana Bold" size="14.0" />
+                <Font name="Verdana Bold" size="14.0"/>
             </font>
         </CheckBox>
-        <CheckBox fx:id="chxStandardbruker" layoutX="269.0" layoutY="368.0" mnemonicParsing="false" text="Standardbruker">
+        <CheckBox fx:id="chxStandardbruker" layoutX="269.0" layoutY="368.0" mnemonicParsing="false"
+                  text="Standardbruker">
             <font>
-                <Font name="Verdana Bold" size="14.0" />
+                <Font name="Verdana Bold" size="14.0"/>
             </font>
         </CheckBox>
-        <Button fx:id="btnRegistrer" layoutX="433.0" layoutY="154.0" mnemonicParsing="false" onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Register">
+        <Button fx:id="btnRegistrer" layoutX="433.0" layoutY="154.0" mnemonicParsing="false"
+                onAction="#onClick_btn_Register" prefHeight="66.0" prefWidth="118.0"
+                style="-fx-background-color: #3daee4;" text="Register">
             <font>
-                <Font name="Verdana" size="14.0" />
+                <Font name="Verdana" size="14.0"/>
             </font>
         </Button>
-        <Button fx:id="btnAvbryt" layoutX="433.0" layoutY="254.0" mnemonicParsing="false" onAction="#onClick_btn_Avbryt" prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Avbryt">
+        <Button fx:id="btnAvbryt" layoutX="433.0" layoutY="254.0" mnemonicParsing="false" onAction="#onClick_btn_Avbryt"
+                prefHeight="66.0" prefWidth="118.0" style="-fx-background-color: #3daee4;" text="Avbryt">
             <font>
-                <Font name="Verdana" size="14.0" />
+                <Font name="Verdana" size="14.0"/>
             </font>
         </Button>
         <Label layoutX="150.0" layoutY="73.0" prefHeight="30.0" prefWidth="243.0" text="Registrer ny bruker">
             <font>
-                <Font name="Verdana Bold" size="22.0" />
+                <Font name="Verdana Bold" size="22.0"/>
             </font>
         </Label>
         <Label fx:id="labelError" layoutX="150.0" layoutY="409.0" prefHeight="18.0" prefWidth="243.0">
-         <font>
-            <Font name="Verdana" size="12.0" />
-         </font></Label>
+            <font>
+                <Font name="Verdana" size="12.0"/>
+            </font>
+        </Label>
         <ImageView fitHeight="90.0" fitWidth="109.0" layoutX="464.0" layoutY="28.0">
             <image>
-                <Image url="@img/logo2.png" />
+                <Image url="@img/logo2.png"/>
             </image>
         </ImageView>
     </children>
